--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<section class="hero is-link is-fullheight-with-navbar">
+  <div class="hero-body homepage">
+    <div class="container is-max-desktop">
+      <div class="notification is-black">
+        <div class="field has-addons">
+          <div class="control is-expanded">
+            <input class="input" type="text" placeholder="Search for a game">
+          </div>
+          <div class="control">
+            <a class="button is-dark">
+              Search
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
