--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Games#index</h1>
-<p>Find me in app/views/games/index.html.erb</p>
+<section class="hero is-dark is-fullheight-with-navbar">
+  <div class="hero-body">
+    <div class="container is-widescreen">
+      <div class="container has-text-centered">
+        <div class="notification is-black">
+          <p class="title pb-6">Games</p>
+          <div class="columns is-multiline is-mobile">
+            <%@games.each do |game|%>
+              <div class="column is-one-quarter">
+                <p><%=game.title%></p>
+              </div>
+            <%end%>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
