Added feature to search by genre.

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,7 +1,7 @@
-<section class="hero is-fullheight-with-navbar about-page">
+<section class="hero is-fullheight-with-navbar background">
   <div class="hero-body">
     <div class="container has-text-centered about-page">
-      <div class="notification is-black">
+      <div class="notification is-dark">
         <p class="title pb-6">
           About Page
         </p>
