--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar is-black">
+<nav class="navbar is-dark">
   <div class="container">
     <div id="navMenu" class="navbar-menu">
       <div class="navbar-start">
