--- a/app/views/games/search.html.erb
+++ b/app/views/games/search.html.erb
@@ -2,8 +2,8 @@
   <div class="hero-body">
     <div class="container is-widescreen">
       <div class="container has-text-centered">
-        <p class="title pb-4  page-title" >Games</p>
-        <div class="notification is-dark px-6 pt-6">
+        <p class="title pb-4  page-title" >Search results for "<%= params[:q] %>"</p>
+        <div class="notification is-dark px-6 pt-6 pb-6">
           <div class="columns is-multiline is-mobile">
             <%@games.each do |game|%>
               <div class="column is-one-quarter">
