--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 .navbar{
   -webkit-box-shadow: 0 8px 6px -6px rgb(15, 15, 15);
   -moz-box-shadow: 0 8px 6px -6px rgb(15, 15, 15);
-       box-shadow: 0 8px 6px -6px rgb(15, 15, 15);
+  box-shadow: 0 8px 6px -6px rgb(0, 0, 0);
 }
 
 .homepage{
@@ -35,3 +35,81 @@
 .card{
   background-color: black;
 }
+
+.paginate-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.inner-table-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.background{
+  background-color: #121212;
+}
+
+.game-details-list{
+  list-style-type: none;
+  font-size: 25px;
+}
+
+.detail-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+}
+
+.game-hero{
+  width: 75%;
+}
+
+.game-details-container{
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+.home-column{
+  justify-content: center !important;
+}
+
+html {
+  background-color: #121212 !important;
+}
+
+.table-container{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.page-title{
+  color: white !important;
+}
+
+tr{
+  color: black !important;
+}
+
+table{
+  width: 90%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+th{
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+
