--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Genres#index</h1>
-<p>Find me in app/views/genres/index.html.erb</p>
+<p class="title pb-4 pt-6 has-text-centered page-title">Genres</p>
+<div class="table-container">
+  <div class="container has-text-centered">
+    <div class="notification is-dark">
+      <div class="inner-table-container">
+        <table>
+          <thead>
+            <tr>
+              <th>Genre</th>
+              <th>Number of games</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @genres.each do |genre| %>
+              <tr>
+                <td><%= genre.genre_name %></td>
+                <td><%= genre.games.count %></td>
+                <td><%= link_to "View Games", genre, class: 'button' %></td>
+              </tr>
+            <%end%>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
