--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,19 +1,11 @@
-<section class="hero is-fullheight-with-navbar background">
-  <div class="hero-body">
-    <div class="container has-text-centered about-page">
-      <div class="notification is-dark">
-        <p class="title pb-6">
-          About Page
-        </p>
-        <div class="container has-text-centered pb-5">
-          <p class="subtitle">
-          In this website you're able to find and search for free to play games using FreeToGames API. <br/> <br/>
+<section class="hero is-medium">
+<div class="hero-body about-hero">
+  <h1 class="is-size-1 has-text-centered has-text-weight-bold">About.</h1>
+</div>
+<div class="about-container">
+<p class="has-text-centered has-text-weight-semibold about-text">In this website you're able to find and search for free to play games using FreeToGames API. <br/> <br/>
 
           The way the data is structured is an array of games and inside that contains an object of
-          details about that game such as the genre, release date, title, and a short description of the game.
-        </p>
-      </div>
-      </div>
-    </div>
-  </div>
+          details about that game such as the genre, release date, title, and a short description of the game.</p>
+</div>
 </section>
