--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <section class="hero is-link is-fullheight-with-navbar">
   <div class="hero-body homepage">
     <div class="container is-max-desktop">
-      <div class="notification is-dark home-search-container">
+      <div class="notification is-dark">
 
         <form action="/search">
           <div class="columns home-column">
@@ -15,7 +15,7 @@
                 </select>
               </div>
             </div>
-            <div class="column is-9">
+            <div class="column is-9.5">
               <div class="field has-addons">
               <div class="control is-expanded">
                 <input class="input" type="text" placeholder="Search for a game" name="q">
