--- a/app/views/games/search.html.erb
+++ b/app/views/games/search.html.erb
@@ -2,7 +2,11 @@
   <div class="hero-body">
     <div class="container is-widescreen">
       <div class="container has-text-centered">
-        <p class="title pb-4  page-title" >Search results for "<%= params[:q] %>"</p>
+        <%if params[:q] == ""%>
+          <p class="title pb-4  page-title" >Search results for "<%= params[:f] %>"</p>
+        <%else%>
+          <p class="title pb-4  page-title" >Search results for "<%= params[:q] %>"</p>
+        <%end%>
         <div class="notification is-dark px-6 pt-6 pb-6">
           <div class="columns is-multiline is-mobile">
             <%@games.each do |game|%>
