--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -3,7 +3,7 @@
   <h1 class="is-size-1 has-text-centered has-text-weight-bold">About.</h1>
 </div>
 <div class="about-container">
-<p class="has-text-centered has-text-weight-semibold about-text">In this website you're able to find and search for free to play games using FreeToGames API. <br/> <br/>
+<p class="has-text-centered has-text-weight-light about-text">In this website you're able to find and search for free to play games using FreeToGames API. <br/> <br/>
 
           The way the data is structured is an array of games and inside that contains an object of
           details about that game such as the genre, release date, title, and a short description of the game.</p>
