--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -10,7 +10,7 @@
                 <div class="card">
                   <div class="card-image">
                     <figure class="image is-4by3">
-                       <%= link_to image_tag(game.thumbnail, :alt => game.title), game %>
+                       <%= link_to image_tag(game.thumbnail, :alt => game.title), game, :class => "game-image"%>
                     </figure>
                   </div>
                   <div class="card-content">
